--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':libitemtouchhelper')
 }
