--- a/libitemtouchhelper/build.gradle
+++ b/libitemtouchhelper/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-group ='com.github.mrme2014'
+
+ext{
+    PUBLISH_GROUP_ID = 'com.qiaomu'
+    PUBLISH_ARTIFACT_ID = 'libitemtouchhelper'
+    PUBLISH_VERSION = '1.0.2'
+}
 
 android {
     compileSdkVersion 25
@@ -28,4 +32,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 }
-
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
